--- a/src/scss/typography.scss
+++ b/src/scss/typography.scss
@@ -5,3 +5,7 @@
 | _________________________________________________
 |
 */
+
+/* Open Sans
+------------- */
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,700,400);
