--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -12,7 +12,7 @@ $softBlack: rgb(40,40,40);
 
 /* Typography
 -------------- */
-$baseLineHeight: 1.5em !default;
+$baseLineHeight: 1.5 !default;
 $baseFontSize: 14px !default;
 $baseFontFamily: 'Open Sans', sans-serif;
 $baseTextColor: $softBlack;
