--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -14,7 +14,7 @@
 
 /* Common rules
 ---------------- */
-html {
+html, body {
 	font-size: $baseFontSize;
 	line-height: $baseLineHeight;
 	font-family: $baseFontFamily;
