--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,9 +1,12 @@
 /*_________________________________________________
 |
-|	Page.scss
+|	Main.scss
 | _________________________________________________
 |
 |	Create global.css file which include all the
 |	css rules that will be loaded by all pages.
 |
 */
+
+@import 
+	"global";
